--- a/Jupyterlab/install
+++ b/Jupyterlab/install
@@ -1,4 +1,4 @@
 #!/bin/bash
 set -o nounset -o errexit -o pipefail
 
-pip install --upgrade six && pip install jupyterlab && pip install --upgrade jupyter
+ pip install jupyterlab
