--- a/rstudio/install
+++ b/rstudio/install
@@ -6,9 +6,9 @@ mkdir -p /tmp/rstudio-temp
 cd /tmp/rstudio-temp
 apt-get update -y
 apt-get install -y gdebi libapparmor1
-wget  -q https://download2.rstudio.org/server/trusty/amd64/rstudio-server-1.2.5033-amd64.deb
-gdebi -n rstudio-server-1.2.5033-amd64.deb
-ln -s /usr/lib/rstudio-server /usr/local/lib/rstudio-server 
+wget  -q https://download2.rstudio.org/server/bionic/amd64/rstudio-server-1.3.1056-amd64.deb
+gdebi -n rstudio-server-1.3.1056-amd64.deb
+ln -sf /usr/lib/rstudio-server /usr/local/lib/rstudio-server 
 chown -R root:root /usr/lib/rstudio-server
 cd ~
 rm -rf /tmp/rstudio-temp
@@ -19,7 +19,7 @@ echo "www-frame-origin=any" >> /etc/rstudio/rserver.conf
 chown ubuntu:ubuntu /etc/rstudio/rserver.conf
 
 #Make rmarkdown::render work outside of rstudio. https://github.com/rstudio/rmarkdown/blob/master/PANDOC.md
-ln -s /usr/lib/rstudio-server/bin/pandoc/pandoc /usr/local/bin
-ln -s /usr/lib/rstudio-server/bin/pandoc/pandoc-citeproc /usr/local/bin
+ln -sf /usr/lib/rstudio-server/bin/pandoc/pandoc /usr/local/bin
+ln -sf /usr/lib/rstudio-server/bin/pandoc/pandoc-citeproc /usr/local/bin
 
 rm -rf /var/lib/apt/lists/*
