--- a/vscode/install
+++ b/vscode/install
@@ -27,3 +27,4 @@ export PATH=/opt/code-server:$PATH
 echo 'export PATH=/opt/code-server:$PATH' >> /home/ubuntu/.domino-defaults
 
 rm -rf /var/lib/apt/lists/*
+chown -R ubuntu:ubuntu /home/ubuntu/.config/
