--- a/vscode/install
+++ b/vscode/install
@@ -1,30 +1,23 @@
 #!/bin/bash
 set -o nounset -o errexit -o pipefail
 
-
-#install code-server  
-cd /opt && \
-  mkdir /opt/code-server && \
-  cd /opt/code-server && \
+# Install code-server  
+mkdir -p /opt/code-server && \
+  cd cd /opt/code-server  && \
+  && \
   wget -qO- https://github.com/cdr/code-server/releases/download/3.4.1/code-server-3.4.1-linux-x86_64.tar.gz | tar zxvf - --strip-components=1
 
-
-#install the python extension for vs-code
+# Install the python extension for vs-code
 apt-get update -y
-apt-get install -y libarchive-tools
+apt-get install -y libarchive-tools curl wget
 mkdir -p /home/ubuntu/.local/share/code-server/extensions/ms-python.python-2020.7.96456 && \
 cd /home/ubuntu/.local/share/code-server/extensions/ms-python.python-2020.7.96456
 curl -JL https://github.com/microsoft/vscode-python/releases/download/2020.7.96456/ms-python-release.vsix | bsdtar -xvf - extension
 
 cd /home/ubuntu/.local/share/code-server/extensions/ms-python.python-2020.7.96456/extension/ && mv * ../
 
-
 chown -R ubuntu:ubuntu /home/ubuntu/.local/share/code-server/
-
-
 export PATH=/opt/code-server:$PATH
-
 echo 'export PATH=/opt/code-server:$PATH' >> /home/ubuntu/.domino-defaults
-
 rm -rf /var/lib/apt/lists/*
 chown -R ubuntu:ubuntu /home/ubuntu/.config/
