--- a/vscode/install
+++ b/vscode/install
@@ -5,14 +5,18 @@ set -o nounset -o errexit -o pipefail
 cd /opt && \
   mkdir /opt/code-server && \
   cd /opt/code-server && \
-  wget -qO- https://github.com/cdr/code-server/releases/download/3.4.1/code-server-3.4.1-linux-x86_64.tar.gz | tar zxvf - --strip-components=1
+  wget -qO- https://newdad.s3.eu-north-1.amazonaws.com/code-server-3.4.1_v2-linux-x86_64.tar.gz | tar zxvf - --strip-components=1
 
-#install the python extension for vs-code
+# Install the python and npm extension for vs-code
 apt-get update -y
 apt-get install -y libarchive-tools
 mkdir -p /home/ubuntu/.local/share/code-server/extensions/ms-python.python-2020.7.96456 && \
 cd /home/ubuntu/.local/share/code-server/extensions/ms-python.python-2020.7.96456
 curl -JL https://github.com/microsoft/vscode-python/releases/download/2020.7.96456/ms-python-release.vsix | bsdtar -xvf - extension
+
+mkdir -p /home/ubuntu/.local/share/code-server/extensions/eg2.vscode-npm-script-0.3.13 && \
+cd /home/ubuntu/.local/share/code-server/extensions/eg2.vscode-npm-script-0.3.13
+curl -JL https://newdad.s3.eu-north-1.amazonaws.com/eg2.vscode-npm-script-0.3.13.vsix | bsdtar -xvf - extension
 
 cd /home/ubuntu/.local/share/code-server/extensions/ms-python.python-2020.7.96456/extension/ && mv * ../
 
