--- a/rstudio/install
+++ b/rstudio/install
@@ -1,19 +1,15 @@
 #!/bin/bash
 set -o nounset -o errexit -o pipefail
 
-
 mkdir -p /tmp/rstudio-temp
 cd /tmp/rstudio-temp
-apt-get update -y
-apt-get install -y gdebi libapparmor1
-wget  -q https://download2.rstudio.org/server/bionic/amd64/rstudio-server-1.3.1056-amd64.deb
-gdebi -n rstudio-server-1.3.1056-amd64.deb
+apt-get update && apt-get install -y gdebi libapparmor1
+wget  -q https://download2.rstudio.org/server/xenial/amd64/rstudio-server-1.3.1073-amd64.deb
+gdebi -n rstudio-server-1.3.1073-amd64.deb
 ln -sf /usr/lib/rstudio-server /usr/local/lib/rstudio-server 
 chown -R root:root /usr/lib/rstudio-server
 cd ~
 rm -rf /tmp/rstudio-temp
-
-
 
 echo "www-frame-origin=any" >> /etc/rstudio/rserver.conf
 chown ubuntu:ubuntu /etc/rstudio/rserver.conf
