--- a/rstudio/install
+++ b/rstudio/install
@@ -4,8 +4,8 @@ set -o nounset -o errexit -o pipefail
 mkdir -p /tmp/rstudio-temp
 cd /tmp/rstudio-temp
 apt-get update && apt-get install -y gdebi libapparmor1
-wget  -q https://download2.rstudio.org/server/bionic/amd64/rstudio-server-1.2.5042-amd64.deb
-gdebi -n rstudio-server-1.2.5042-amd64.deb
+wget  -q https://s3.amazonaws.com/rstudio-ide-build/desktop/bionic/amd64/rstudio-1.4.869-amd64.deb
+gdebi -n rstudio-1.4.869-amd64.deb
 ln -sf /usr/lib/rstudio-server /usr/local/lib/rstudio-server 
 chown -R root:root /usr/lib/rstudio-server
 cd ~
