--- a/vscode/install
+++ b/vscode/install
@@ -39,7 +39,7 @@ export PATH=/opt/code-server/bin:$PATH && \
 cd /tmp && \
 mkdir -p /home/ubuntu/.local/share/code-server/ && \
 mkdir -p /home/ubuntu/.local/share/code-server/User && \
-echo "{\"extensions.autoCheckUpdates\": false, \"extensions.autoUpdate\": false}" > ~/.local/share/code-server/User/settings.json && \
+echo "{\"extensions.autoCheckUpdates\": false, \"extensions.autoUpdate\": false}" > /home/ubuntu/.local/share/code-server/User/settings.json && \
 wget https://github.com/microsoft/vscode-python/releases/download/2020.10.332292344/ms-python-release.vsix \
  && code-server --install-extension ./ms-python-release.vsix --extensions-dir /home/ubuntu/.local/share/code-server/extensions || true
 #wget -q https://github.com/microsoft/vscode-python/releases/download/2020.5.86806/ms-python-release.vsix && \
