--- a/rstudio/install
+++ b/rstudio/install
@@ -5,7 +5,7 @@ mkdir -p /tmp/rstudio-temp
 cd /tmp/rstudio-temp
 apt-get update -y && apt-get install -y gdebi libapparmor1
 wget  -q https://download2.rstudio.org/server/trusty/amd64/rstudio-server-1.2.5033-amd64.deb
-gdebi rstudio-server-1.2.5033-amd64.deb
+gdebi -n rstudio-server-1.2.5033-amd64.deb
 ln -sf /usr/lib/rstudio-server /usr/local/lib/rstudio-server 
 chown -R root:root /usr/lib/rstudio-server
 cd ~
