--- a/rstudio/install
+++ b/rstudio/install
@@ -8,6 +8,8 @@ wget  -q https://download2.rstudio.org/server/trusty/amd64/rstudio-server-1.4.17
 gdebi -n rstudio-server-1.4.1707-amd64.deb
 ln -sf /usr/lib/rstudio-server /usr/local/lib/rstudio-server 
 chown -R root:root /usr/lib/rstudio-server
+chown -R ubuntu:ubuntu /var/run/rstudio-server
+chown -R ubuntu:ubuntu /var/lib/rstudio-server
 cd ~
 rm -rf /tmp/rstudio-temp
 
