--- a/rstudio/install
+++ b/rstudio/install
@@ -4,8 +4,8 @@ set -o nounset -o errexit -o pipefail
 mkdir -p /tmp/rstudio-temp
 cd /tmp/rstudio-temp
 apt-get update -y && apt-get install -y gdebi libapparmor1
-wget  -q https://s3.amazonaws.com/rstudio-ide-build/server/bionic/amd64/rstudio-server-1.4.1707-amd64.deb
-gdebi -n rstudio-server-1.4.1707-amd64.deb
+wget  -q https://download2.rstudio.org/server/trusty/amd64/rstudio-server-1.2.5042-amd64.deb
+gdebi -n rstudio-server-1.2.5042-amd64.deb
 ln -sf /usr/lib/rstudio-server /usr/local/lib/rstudio-server 
 chown -R root:root /usr/lib/rstudio-server
 cd ~
@@ -17,6 +17,5 @@ chown ubuntu:ubuntu /etc/rstudio/rserver.conf
 #Make rmarkdown::render work outside of rstudio. https://github.com/rstudio/rmarkdown/blob/master/PANDOC.md
 ln -sf /usr/lib/rstudio-server/bin/pandoc/pandoc /usr/local/bin
 ln -sf /usr/lib/rstudio-server/bin/pandoc/pandoc-citeproc /usr/local/bin
-
 
 rm -rf /var/lib/apt/lists/*
