--- a/rstudio/install
+++ b/rstudio/install
@@ -3,15 +3,15 @@ set -o nounset -o errexit -o pipefail
 
 mkdir -p /tmp/rstudio-temp
 cd /tmp/rstudio-temp
-apt-get update -y && apt-get install -y gdebi libapparmor1
-wget  -q https://download2.rstudio.org/server/trusty/amd64/rstudio-server-1.2.5042-amd64.deb
-gdebi -n rstudio-server-1.2.5042-amd64.deb
-ln -sf /usr/lib/rstudio-server /usr/local/lib/rstudio-server 
+apt-get update && apt-get install -y gdebi
+wget  -q https://download2.rstudio.org/server/bionic/amd64/rstudio-server-1.4.1106-amd64.deb
+gdebi -n rstudio-server-1.4.1106-amd64.deb
+ln -sf /usr/lib/rstudio-server /usr/local/lib/rstudio-server
 chown -R root:root /usr/lib/rstudio-server
 cd ~
 rm -rf /tmp/rstudio-temp
 
-echo "www-frame-origin=any" >> /etc/rstudio/rserver.conf
+echo "www-frame-origin=any" > /etc/rstudio/rserver.conf
 chown ubuntu:ubuntu /etc/rstudio/rserver.conf
 
 #Make rmarkdown::render work outside of rstudio. https://github.com/rstudio/rmarkdown/blob/master/PANDOC.md
