--- a/jupyter/install
+++ b/jupyter/install
@@ -5,33 +5,37 @@ set -o nounset -o errexit -o pipefail
 pip install 'chardet<4.0,>=2.0' #version depdendency on jupyter
 pip install -U jupyter
 
+# creating more general based on docker user name
+user_name=`whoami`
+group_id=group=`id -g -n`
+
 # # #   # CONFIGURE Jupyter
-mkdir -p /home/ubuntu/.jupyter
-echo 'c = get_config()' > /home/ubuntu/.jupyter/jupyter_notebook_config.py
+mkdir -p /home/$user_name/.jupyter
+echo 'c = get_config()' > /home/$user_name/.jupyter/jupyter_notebook_config.py
 
 # The default cell execution timeout in nbconvert is 30 seconds, set it to a year
-echo '# The default cell execution timeout in nbconvert is 30 seconds, set it to a year' >> /home/ubuntu/.jupyter/jupyter_notebook_config.py
-echo 'c.ExecutePreprocessor.timeout = 365*24*60*60' >> /home/ubuntu/.jupyter/jupyter_notebook_config.py
+echo '# The default cell execution timeout in nbconvert is 30 seconds, set it to a year' >> /home/$user_name/.jupyter/jupyter_notebook_config.py
+echo 'c.ExecutePreprocessor.timeout = 365*24*60*60' >> /home/$user_name/.jupyter/jupyter_notebook_config.py
 
 # Allow embedding of notebooks in iframes
-echo '# Allow embedding of notebooks in iframes' >> /home/ubuntu/.jupyter/jupyter_notebook_config.py
-echo 'c.NotebookApp.tornado_settings = { "headers": { "Content-Security-Policy": "frame-ancestors *" } }' >> /home/ubuntu/.jupyter/jupyter_notebook_config.py 
-echo "c.NotebookApp.token = ''" >> /home/ubuntu/.jupyter/jupyter_notebook_config.py
-echo "c.NotebookApp.iopub_data_rate_limit=10000000000" >> /home/ubuntu/.jupyter/jupyter_notebook_config.py
+echo '# Allow embedding of notebooks in iframes' >> /home/$user_name/.jupyter/jupyter_notebook_config.py
+echo 'c.NotebookApp.tornado_settings = { "headers": { "Content-Security-Policy": "frame-ancestors *" } }' >> /home/$user_name/.jupyter/jupyter_notebook_config.py 
+echo "c.NotebookApp.token = ''" >> /home/$user_name/.jupyter/jupyter_notebook_config.py
+echo "c.NotebookApp.iopub_data_rate_limit=10000000000" >> /home/$user_name/.jupyter/jupyter_notebook_config.py
 #Custom js for domino header. New noebooks open within the same tab with the Domino banner. 
-mkdir -p /home/ubuntu/.jupyter/custom/
-echo "require(['base/js/namespace'], function(jupyter) { jupyter._target='_self'; });" >> /home/ubuntu/.jupyter/custom/custom.js 
+mkdir -p /home/$user_name/.jupyter/custom/
+echo "require(['base/js/namespace'], function(jupyter) { jupyter._target='_self'; });" >> /home/$user_name/.jupyter/custom/custom.js 
 
 # Disable the login for Jupyter
-mkdir -p /home/ubuntu/.jupyter 
-printf "\nc.NotebookApp.token = u'' \n\n" >> /home/ubuntu/.jupyter/jupyter_notebook_config.py 
+mkdir -p /home/$user_name/.jupyter 
+printf "\nc.NotebookApp.token = u'' \n\n" >> /home/$user_name/.jupyter/jupyter_notebook_config.py 
 
 # Maintain backward compatibility with ipython
-mkdir -p /home/ubuntu/.ipython/profile_default 
-ln -sf   /home/ubuntu/.jupyter/jupyter_notebook_config.py /home/ubuntu/.ipython/profile_default/ipython_notebook_config.py
-chown -R ubuntu:ubuntu /home/ubuntu/.ipython
+mkdir -p /home/$user_name/.ipython/profile_default 
+ln -sf   /home/$user_name/.jupyter/jupyter_notebook_config.py /home/$user_name/.ipython/profile_default/ipython_notebook_config.py
+chown -R $user_name:$group_id /home/$user_name/.ipython
 
-chown -R ubuntu:ubuntu /home/ubuntu/.jupyter
+chown -R $user_name:$group_id /home/$user_name/.jupyter
 
 
 
